Carection de bug velu!! sass: ligne 233-235 et 236. display: flex + white-space: nowrap (pas bien ?!)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -187,12 +187,11 @@ header {
 }
 
 .main-menu {
-    div:first-child {
+    div {
+        display: grid;
         background-repeat: no-repeat;
         background-position-x: center;
         background-size: 110%;
-    
-        display: flex;
     }
 }
 
@@ -202,10 +201,6 @@ header {
     border-radius: 40px 40px 0 0;
     margin-top: 59vw;
     padding: 40px 20px;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
 
     &__title {
         margin-bottom: 30px;
@@ -234,27 +229,27 @@ header {
             margin-top: 15px;
             padding: 10px 20px 10px 10px;
             border-radius: 15px;
-        
+
             div {
-                display: flex;
-                justify-content: space-between;
+                display: grid;
+                grid: auto-flow / 85% 15%;
             }
-                
+
             &__title {
                 margin-bottom: 5px;
                 font-weight: 500;
                 font-size: 18px;
             }
-        
+
             &__text {
-                width: 85%;
                 font-size: 15px;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
-        
+
             &__price {
+                text-align: right;
                 font-weight: 500;
                 font-size: 15px;
             }
